<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright © 2014 TIBCO Software, Inc. All rights reserved.
    http://community.jaspersoft.com/project/jaspermobile-android

    Unless you have purchased a commercial license agreement from Jaspersoft,
    the following license terms apply:

    This program is part of Jaspersoft Mobile for Android.

    Jaspersoft Mobile is free software: you can redistribute it and/or modify
    it under the terms of the GNU Lesser General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Jaspersoft Mobile is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
    GNU Lesser General Public License for more details.

    You should have received a copy of the GNU Lesser General Public License
    along with Jaspersoft Mobile for Android. If not, see
    <http://www.gnu.org/licenses/lgpl>.
-->

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    android:id="@+id/table"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TableRow style="@style/home.row.bottom">

        <!--Library-->
        <com.jaspersoft.android.jaspermobile.widget.LinearCardView
            android:id="@+id/home_item_library"
            style="@style/home.card.box.left"
            auto:body_subtitle="@string/library_card_desc"
            auto:body_title="@string/library_card_label"
            auto:header_icon="@drawable/ic_home_library"
            auto:header_background="@color/dashboard_item_bg" />

        <!--Saved Items-->
        <com.jaspersoft.android.jaspermobile.widget.LinearCardView
            android:id="@+id/home_item_saved_reports"
            style="@style/home.card.box"
            auto:body_subtitle="@string/saved_items_card_desc"
            auto:body_title="@string/sdr_ab_title"
            auto:header_icon="@drawable/ic_home_saved_items"
            auto:header_background="@color/dashboard_item_bg" />

    </TableRow>

    <TableRow style="@style/home.row.bottom">

        <!--Repository-->
        <com.jaspersoft.android.jaspermobile.widget.LinearCardView
            android:id="@+id/home_item_repository"
            style="@style/home.card.box.left"
            auto:body_subtitle="@string/repository_card_desc"
            auto:body_title="@string/repository_card_label"
            auto:header_icon="@drawable/ic_home_repository"
            auto:header_background="@color/dashboard_item_bg" />

        <!--Favorites-->
        <com.jaspersoft.android.jaspermobile.widget.LinearCardView
            android:id="@+id/home_item_favorites"
            style="@style/home.card.box"
            auto:body_subtitle="@string/favorites_card_desc"
            auto:body_title="@string/favorites_card_label"
            auto:header_icon="@drawable/ic_home_favorites"
            auto:header_background="@color/dashboard_item_bg" />

    </TableRow>

    <TableRow style="@style/home.row">

        <!--Settings-->
        <com.jaspersoft.android.jaspermobile.widget.LinearCardView
            android:id="@+id/home_item_settings"
            style="@style/home.card.box.left"
            auto:body_subtitle="@string/settings_card_desc"
            auto:body_title="@string/settings_card_label"
            auto:header_icon="@drawable/ic_home_config"
            auto:header_background="@color/config_item_bg" />

        <!--Servers-->
        <com.jaspersoft.android.jaspermobile.widget.LinearCardView
            android:id="@+id/home_item_servers"
            style="@style/home.card.box"
            auto:body_subtitle="@string/servers_card_desc"
            auto:body_title="@string/servers_card_label"
            auto:header_icon="@drawable/ic_home_servers"
            auto:header_background="@color/config_item_bg" />

    </TableRow>

</TableLayout>

