<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2012 Jaspersoft Corporation. All rights reserved.
    http://community.jaspersoft.com/project/jaspermobile-android

    Unless you have purchased a commercial license agreement from Jaspersoft,
    the following license terms apply:

    This program is part of Jaspersoft Mobile for Android.

    Jaspersoft Mobile is free software: you can redistribute it and/or modify
    it under the terms of the GNU Lesser General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Jaspersoft Mobile is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
    GNU Lesser General Public License for more details.

    You should have received a copy of the GNU Lesser General Public License
    along with Jaspersoft Mobile for Android. If not, see
    <http://www.gnu.org/licenses/lgpl>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pwdDialogLayoutRoot"
    android:orientation="vertical"
    style="@style/home.dialog.layout" >

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/home.dialog.table.layout" >

        <!-- Server Profile -->
        <TableRow>
            <TextView
                android:text="@string/h_ad_label_server_profile"
                style="@style/home.dialog.table.label"
            />
            <TextView
                android:id="@+id/dialogProfileNameText"
            />
        </TableRow>

        <!-- Organization -->
        <TableRow
            android:id="@+id/dialogOrganizationTableRow"
            android:visibility="gone" >

            <TextView
                android:text="@string/h_ad_label_organization"
                style="@style/home.dialog.table.label"
            />
            <TextView
                android:id="@+id/dialogOrganizationText"
            />
        </TableRow>

        <!-- Username -->
        <TableRow>
            <TextView
                android:text="@string/h_ad_label_username"
                style="@style/home.dialog.table.label"
            />
            <TextView
                android:id="@+id/dialogUsernameText"
            />
        </TableRow>

    </TableLayout>

    <!-- Password -->
    <TextView
        style="@style/label"
        android:text="@string/sp_password_label"
    />
    <EditText
        android:id="@+id/dialogPasswordEdit"
        android:hint="@string/sp_password_hint"
        style="@style/home.dialog.passwordEdit"
    />

</LinearLayout>